--- a/lab_03/Python Classes.ipynb
+++ b/lab_03/Python Classes.ipynb
@@ -2,18 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Your input is:  HELLO, WORLD!\n"
+      "Your input is:  ADAASDAW\n"
      ]
     }
    ],
    "source": [
+    "\"\"\"\n",
+    "Class that gets a string from a console and prints out the string in upper case\n",
+    "\"\"\"\n",
+    "\n",
     "class MyClass():\n",
     "    def __init__ (self): \n",
     "        self.string =  \"\"\n",
@@ -32,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -45,6 +49,11 @@
     }
    ],
    "source": [
+    "\"\"\"\n",
+    "Class and its subclass, in the class Shape() the default value is 0 \n",
+    "and in its subclass Square() we take length and find the area of a square\n",
+    "\"\"\"\n",
+    "\n",
     "class Shape():\n",
     "    def area(self):\n",
     "        return 0\n",
@@ -66,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -78,6 +87,11 @@
     }
    ],
    "source": [
+    "\"\"\"\n",
+    "Class Rectangle that inherits from Shape() and takes length and width as a input\n",
+    "and fins area of a rectangle\n",
+    "\"\"\"\n",
+    "\n",
     "class Rectangle(Shape):\n",
     "    def __init__ (self, length, width):\n",
     "        self.length = length\n",
@@ -93,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -108,6 +122,11 @@
    ],
    "source": [
     "from math import sqrt\n",
+    "\n",
+    "\"\"\"\n",
+    "Class Point() that takes initial coordinate and the coordinates after the move() method \n",
+    "and outputs the distance between them\n",
+    "\"\"\"\n",
     "\n",
     "class Point():\n",
     "    def __init__ (self, x, y):\n",
@@ -138,13 +157,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You've deposited: 500. Your balance is: 1500.\n",
+      "You've withdrawed: 300. Your balance is: 1200.\n",
+      "Error: Insufficient funds.\n",
+      "None\n"
+     ]
+    }
+   ],
    "source": [
+    "\"\"\"\n",
+    "Account() class where I can deposit and withdraw money from/into account\n",
+    "\"\"\"\n",
+    "\n",
     "class Account():\n",
     "    def __init__ (self, owner, balance):\n",
+    "        self.owner = owner \n",
+    "        self.balance = balance\n",
+    "        \n",
+    "    def deposit(self, amount):\n",
+    "        self.balance += amount    \n",
+    "        return f\"You've deposited: {amount}. Your balance is: {self.balance}.\"\n",
+    "        \n",
+    "    def withdraw(self, amount):\n",
+    "        if self.balance - amount < 0:\n",
+    "            print(\"Error: Insufficient funds.\")\n",
+    "        else:\n",
+    "            self.balance -= amount\n",
+    "            return f\"You've withdrawed: {amount}. Your balance is: {self.balance}.\"\n",
+    "            \n",
+    "        \n",
+    "        \n",
+    "    \n",
+    "acc = Account(\"Aldiyar\", 1000)  \n",
+    "\n",
+    "print(acc.deposit(500))  \n",
+    "print(acc.withdraw(300))  \n",
+    "print(acc.withdraw(5000)) \n",
+    "\n",
     "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Prime numbers from the list: [2, 3, 5, 7]\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "Check if num is greater than 1 and it's not divisible by any numbers from 2 to sqrt(num).\n",
+    "\"\"\"\n",
+    "\n",
+    "list1 = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
+    "\n",
+    "is_prime = lambda num: num > 1 and all(num % i != 0 for i in range(2, int(num ** 0.5) + 1))\n",
+    "\n",
+    "prime_nums = list(filter(is_prime, list1))\n",
+    "\n",
+    "print(\"Prime numbers from the list:\", prime_nums)\n",
+    "\n"
    ]
   }
  ],
